// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`can be explicitly disabled > args 1`] = `[ErrorMissingArgument: Missing argument for flag "a".]`;

exports[`can be explicitly disabled > tty 1`] = `[]`;

exports[`can be explicitly disabled > tty strip ansi 1`] = `[]`;

exports[`can be explicitly disabled with a "when" condition present > args 1`] = `[ErrorMissingArgument: Missing argument for flag "a".]`;

exports[`can be explicitly disabled with a "when" condition present > tty 1`] = `[]`;

exports[`can be explicitly disabled with a "when" condition present > tty strip ansi 1`] = `[]`;

exports[`prompt when invalid input > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt when invalid input > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when invalid input > tty strip ansi 1`] = `
[
  "1/1  a
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when invalid input OR missing input > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt when invalid input OR missing input > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when invalid input OR missing input > tty strip ansi 1`] = `
[
  "1/1  a
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when missing input > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt when missing input > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when missing input > tty strip ansi 1`] = `
[
  "1/1  a
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when omitted > args 1`] = `
{
  "a": "foo",
  "help": false,
}
`;

exports[`prompt when omitted > tty 1`] = `
[
  "[2m[90m1/1[39m[22m  [32ma[39m
",
  "     ❯ ",
  "foo",
  "
",
]
`;

exports[`prompt when omitted > tty strip ansi 1`] = `
[
  "1/1  a
",
  "     ❯ ",
  "foo",
  "
",
]
`;
